--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -109,6 +109,11 @@ img {
     background-color: var(--color-secondary-dark);
 }
 
+/*cache le menu umberger*/
+.menu_toggle {
+    display : none
+}
+
 /* ---------------------------
    HEADER / FOOTER GLOBAL
 --------------------------- */
